@@ -25,6 +25,7 @@
       <Transform name="i3visio.uriToAllEntities"/> 
       <Transform name="i3visio.uriToBrowser"/> 
       <Transform name="i3visio.uriToDomain"/> 
+      <Transform name="i3visio.uriToGoogleCacheUri"/>      
       <Transform name="i3visio.uriToPort"/>       
       <Transform name="i3visio.uriToProtocol"/>       
    </Transforms>
