@@ -1,0 +1,28 @@
+<MaltegoTransform name="i3visio.uriToGoogleCacheUri" displayName="i3visio - uriToGoogleCacheUri" abstract="false" template="false" visibility="public" author="i3visio" requireDisplayInfo="false">
+   <TransformAdapter>com.paterva.maltego.transform.protocol.v2api.LocalTransformAdapterV2</TransformAdapter>
+   <Properties>
+      <Fields>
+         <Property name="transform.local.command" type="string" nullable="false" hidden="false" readonly="false" description="The command to execute for this transform" popup="false" abstract="false" visibility="public" displayName="Command line">
+            <SampleValue></SampleValue>
+         </Property>
+         <Property name="transform.local.parameters" type="string" nullable="true" hidden="false" readonly="false" description="The parameters to pass to the transform command" popup="false" abstract="false" visibility="public" displayName="Command parameters">
+            <SampleValue></SampleValue>
+         </Property>
+         <Property name="transform.local.working-directory" type="string" nullable="true" hidden="false" readonly="false" description="The working directory used when invoking the executable" popup="false" abstract="false" visibility="public" displayName="Working directory">
+            <DefaultValue><CUSTOM_WORKING_DIRECTORY>/osrframework/transforms</DefaultValue>
+            <SampleValue></SampleValue>
+         </Property>
+         <Property name="transform.local.debug" type="boolean" nullable="true" hidden="false" readonly="false" description="When this is set, the transform&apos;s text output will be printed to the output window" popup="false" abstract="false" visibility="public" displayName="Show debug info">
+            <SampleValue>false</SampleValue>
+         </Property>
+      </Fields>
+   </Properties>
+   <InputConstraints>
+      <Entity type="i3visio.uri" min="1" max="1"/>
+   </InputConstraints>
+   <OutputEntities/>
+   <defaultSets>
+      <Set name="i3visio"/>
+   </defaultSets>
+   <StealthLevel>0</StealthLevel>
+</MaltegoTransform>
