@@ -20,12 +20,14 @@ For more information, check the README.md in http://github.com/i3visio/osrframew
 
 v0.9.0, 2015/04/** -- Major restructuration of the internal tool.
 - Moved platforms to wrappers and changed platforms.py to utils.
+- Inclusion of old darkfy searches to look for information in Tor platforms.
 - Inclusion of regular expression rules to choose valid names.
 - Inclusion of a new mailfy.py app that verifies whether an email is known as a valid email using emailahoy.
 - Inclusion of a new searchfy.py app that recovers the URL of a search in different platforms.
 - Inclusion of all the variables to include phonefy, usufy and searchfy search in all platforms.
 - Inclusion of plain calls to the different third party API in the main folder.
 - Removed phonefy and usufy folders for structural simplicity.
+- Added a uriToGoogleCacheUri transform.
 - Changed usufy-launcher.py and phonefy-launcher.py to usufy.py and phonefy.py.
 - Changed maltfy folder to transforms.
 - Opening .onion URI using onion.cab service.
